bad/shadowing_for_iter.example_compiler_output
ERROR
[1mbad/shadowing_for_iter.lat:4:7: [1;31merror: [0;1mcannot redefine variable `x`[m
		int x;
		    [1;32m^[m
[1mbad/shadowing_for_iter.lat:3:7: [1;34mnote: [0;1mprevious definition is here[m
	for (int x : new int[1])
	     [1;32m^[m
